implemented logging and default_protocol
libcppa emits log4j compatible output now to make use of available tools;
middleman uses `continuable_writer` and `continuable_reader` interfaces only;
´default_protocol´ encapsulates libcppa's binary protocol now;
`remote_actor` checks wheter a previous connection to the host already exists;
actor proxies are stored as weak pointers in peers, fixes #75;
`default_peer` created with `remote_actor` close connection on last proxy exit;
poll and epoll share meta data implementation and event-interface;
no global proxy cache, belongs to `protocol`/`actor_addressing` now;
new configure option: `--with-cppa-log-level`;
`to_string` is no longer a template (enables proper overload resolution)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,12 @@ if (ENABLE_DEBUG)
 #  set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif ()
 
+if (CPPA_LOG_LEVEL)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCPPA_LOG_LEVEL=${CPPA_LOG_LEVEL}")
+else ()
+  set(CPPA_LOG_LEVEL "0")
+endif()
+
 # set build default build type if not set
 if (CMAKE_BUILD_TYPE)
 else (CMAKE_BUILD_TYPE)
@@ -207,6 +213,7 @@ message("\n====================|  Build Summary  |===================="
         "\n"
         "\nBuild type:        ${CMAKE_BUILD_TYPE}"
         "\nDebug mode:        ${ENABLE_DEBUG}"
+        "\nLog level:         ${CPPA_LOG_LEVEL}"
         "\nContext switching: ${CONTEXT_SWITCHING}"
         "\n"
         "\nCXX:               ${CMAKE_CXX_COMPILER}"
