re-enabled and improved tuple unit test

--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -22,6 +22,7 @@ add_unit_test(intrusive_ptr)
 add_unit_test(match)
 add_unit_test(primitive_variant)
 add_unit_test(yield_interface)
+add_unit_test(tuple)
 add_unit_test(spawn ping_pong.cpp)
 add_unit_test(local_group)
 add_unit_test(sync_send)
