--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,23 +1,23 @@
 cmake_minimum_required(VERSION 2.6)
-project(cppa_examples CXX)
+project(cppas CXX)
 
 add_custom_target(all_examples)
 
-macro(add_example name)
-    add_executable(${name} ${name}.cpp ${ARGN})
+macro(add name folder)
+    add_executable(${name} ${folder}/${name}.cpp ${ARGN})
     target_link_libraries(${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES})
     add_dependencies(${name} all_examples)
 endmacro()
 
-add_example(announce_example_1)
-add_example(announce_example_2)
-add_example(announce_example_3)
-add_example(announce_example_4)
-add_example(announce_example_5)
-add_example(dancing_kirby)
-add_example(dining_philosophers)
-add_example(hello_world_example)
-add_example(math_actor_example)
-add_example(distributed_math_actor_example)
-add_example(group_server)
-add_example(group_chat)
+add(announce_1 type_system)
+add(announce_2 type_system)
+add(announce_3 type_system)
+add(announce_4 type_system)
+add(announce_5 type_system)
+add(dancing_kirby message_passing)
+add(dining_philosophers event_based_api)
+add(hello_world .)
+add(math_actor message_passing)
+add(distributed_math_actor remote_actors)
+add(group_server remote_actors)
+add(group_chat remote_actors)
