got rid of Boost.Thread dependency
libcppa actually didn't use Boost.Thread for quite some time now,
this patch finally removed the dependency from CMake project file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,11 +151,10 @@ if (BOOST_ROOT)
 endif ()
 
 find_package(PTHREAD REQUIRED)
-find_package(Boost COMPONENTS thread REQUIRED)
 
-set(INCLUDE_DIRS . ${PTHREAD_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
-set(LD_DIRS ${Boost_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})
-set(LD_FLAGS ${CMAKE_LD_LIBS} ${PTHREAD_LIBRARIES} ${Boost_THREAD_LIBRARY})
+set(INCLUDE_DIRS . ${PTHREAD_INCLUDE_DIR})
+set(LD_DIRS)
+set(LD_FLAGS ${CMAKE_LD_LIBS} ${PTHREAD_LIBRARIES})
 
 if (DISABLE_CONTEXT_SWITCHING)
   # explicitly disabled
@@ -165,6 +164,8 @@ else (DISABLE_CONTEXT_SWITCHING)
   if (NOT Boost_FOUND)
     set(DISABLE_CONTEXT_SWITCHING true)
   else (NOT Boost_FOUND)
+    set(INCLUDE_DIRS ${INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+    set(LD_DIRS ${LD_DIRS} ${Boost_LIBRARY_DIRS})
     set(LD_FLAGS ${LD_FLAGS} ${Boost_CONTEXT_LIBRARY})
     set(DISABLE_CONTEXT_SWITCHING false)
   endif (NOT Boost_FOUND)
