--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -4,15 +4,15 @@ project(cppa_unit_tests CXX)
 add_custom_target(all_unit_tests)
 
 macro(add_unit_test name)
-  add_executable(test__${name} test__${name}.cpp test.cpp ${ARGN})
-  target_link_libraries(test__${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES})
-  add_test(${name} ${EXECUTABLE_OUTPUT_PATH}/test__${name})
-  add_dependencies(test__${name} all_unit_tests)
+  add_executable(test_${name} test_${name}.cpp test.cpp ${ARGN})
+  target_link_libraries(test_${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES})
+  add_test(${name} ${EXECUTABLE_OUTPUT_PATH}/test_${name})
+  add_dependencies(test_${name} all_unit_tests)
 endmacro()
 
 add_unit_test(ripemd_160)
 add_unit_test(atom)
-add_unit_test(type_list)
+add_unit_test(metaprogramming)
 add_unit_test(intrusive_containers)
 add_unit_test(serialization)
 add_unit_test(uniform_type)
