--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,7 @@ if (ENABLE_OPENCL)
   set(LIBCPPA_SRC
       ${LIBCPPA_SRC}
       src/opencl/command_dispatcher.cpp)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCPPA_OPENCL")
 endif (ENABLE_OPENCL)
 
 if (DISABLE_CONTEXT_SWITCHING)
